<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.test.app.ui.numbers.viewmodel.NumbersViewModel" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="isEmpty"
            type="boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayBg">

        <androidx.cardview.widget.CardView
            android:id="@+id/topCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/std_tiny_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/entryTitle"
                    style="@style/BlackStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/std_margin"
                    android:layout_marginTop="@dimen/std_large_margin"
                    android:text="@string/enter_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Please enter number" />

                <EditText
                    android:id="@+id/entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/std_margin"
                    android:layout_marginTop="@dimen/std_margin"
                    android:autofillHints="@string/enter_number_hint"
                    android:hint="@string/enter_number_hint"
                    android:inputType="numberSigned"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entryTitle" />

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/std_margin"
                    android:text="@string/add"
                    app:layout_constraintStart_toStartOf="@id/entry"
                    app:layout_constraintTop_toBottomOf="@id/entry" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/std_large_margin"
                    android:text="@string/delete"
                    app:layout_constraintStart_toEndOf="@id/addButton"
                    app:layout_constraintTop_toTopOf="@id/addButton" />

                <TextView
                    android:id="@+id/averageTitle"
                    style="@style/BlackStyle.TitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/std_margin"
                    android:paddingBottom="@dimen/std_margin"
                    android:layout_marginTop="@dimen/std_xlarge_margin"
                    android:text="@{@string/average(vm.averageNumberFlow)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addButton"
                    tools:text="Average of numbers is 2.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/bottomCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/std_tiny_margin"
            android:layout_marginTop="@dimen/std_large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topCard"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/numbersTitle"
                    style="@style/BlackStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/std_margin"
                    android:layout_marginTop="@dimen/std_margin"
                    android:text="@string/numbers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Numbers" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:visibility="@{isEmpty ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="No Data" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/numbersList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/std_margin"
                    android:layout_marginTop="@dimen/std_large_margin"
                    android:layout_marginEnd="@dimen/std_margin"
                    android:visibility="@{(isLoading || isEmpty) ? View.GONE : View.VISIBLE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/numbersTitle"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>